Ajustes en estilos para corregir: Altura correcta de la primera imagen de la galería (web/mobile) -> validaciones.js - useCSS:false, boostrap.min.css, jquery.bxslider.css, Contraste correcto de controles de la galería -> controls.png Corrección del hover del botón Aplicar estilo -> themeEditor.css

--- a/src/main/webapp/resources/webapp/css/jquery.bxslider.css
+++ b/src/main/webapp/resources/webapp/css/jquery.bxslider.css
@@ -33,6 +33,7 @@
 /** THEME
 ===================================*/
 
+
 .bx-wrapper .bx-viewport {
 /*	-moz-box-shadow: 0 0 5px #ccc;
 	-webkit-box-shadow: 0 0 5px #ccc;
@@ -40,6 +41,8 @@
 	border:  5px solid #fff;*/
 	left: -5px;
 /* 	background: #fff; */
+/*height:568px!important;*/
+max-height:568px!important;min-height:265px!important;
 	
 	/*fix other elements on the page moving (on Chrome)*/
 	-webkit-transform: translatez(0);
@@ -47,6 +50,7 @@
     	-ms-transform: translatez(0);
     	-o-transform: translatez(0);
     	transform: translatez(0);
+    	
 }
 
 .bx-wrapper .bx-pager,
@@ -131,7 +135,7 @@
 	margin-top: -16px;
 	outline: 0;
 	width: 32px;
-	height: 32px;
+	height: 33px;
 	text-indent: -9999px;
 	z-index: 9999;
 }
@@ -217,3 +221,112 @@
 .slide-contain { margin: 0 auto; width:1000px; }
 /*nuevo*/
 .bx-wrapper, .bx-viewport, .bx-wrapper img {height:auto;max-height:568px!important;min-height:265px!important;}
+.bx-wrapper .bx-viewport {
+height:568px!important;
+}
+/* ----------- iPhone 4 and 4S ----------- */
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+.bx-wrapper .bx-viewport {
+height:278px!important;
+}
+}
+/* ----------- iPhone 5 and 5S ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+.bx-wrapper .bx-viewport {
+height:278px!important;
+}
+}
+
+/* ----------- iPhone 6 ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+.bx-wrapper .bx-viewport {
+height:330px!important;
+}
+}
+/* ----------- iPhone 6+ ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+.bx-wrapper .bx-viewport {
+height:367px!important;
+}
+}
+/* ----------- Galaxy S3 ----------- */
+
+/* Portrait and Landscape */
+@media screen 
+  and (device-width: 320px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 2) {
+.bx-wrapper .bx-viewport {
+height:316px!important;
+}
+}
+/* ----------- Galaxy S5 ----------- */
+
+/* Portrait and Landscape */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) {
+.bx-wrapper .bx-viewport {
+height:316px!important;
+}
+}
+
+/* ----------- iPad mini ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+}
+/* ----------- iPad 1 and 2 ----------- */
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+}
+/* ----------- Galaxy Tab 10.1 ----------- */
+
+/* Portrait and Landscape */
+@media 
+  (min-device-width: 800px) 
+  and (max-device-width: 1280px) {
+
+}
+/* ----------- Non-Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+}
+
+/* ----------- Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+}
