--- a/src/main/webapp/resources/webapp/css/themeEditor.css
+++ b/src/main/webapp/resources/webapp/css/themeEditor.css
@@ -182,3 +182,4 @@ textarea { padding: 10px; width: 300px; }
 .text-right{ text-align:right}
 .text-center{text-align:center}
 .nav a{color:#fff!important; font-family: 'Lato', Arial, sans-serif !important; font-weight: 300;}
+.btn-purple:hover{color:#fff!important;}
